Adding MyST link to title_page

--- a/title_page.ipynb
+++ b/title_page.ipynb
@@ -71,7 +71,7 @@
    "id": "e3b50bb9-9a3d-45c9-81e4-44610993304f",
    "metadata": {},
    "source": [
-    "Link to our Jupyter Book:"
+    "Link to our Jupyter Book: https://stat159.datahub.berkeley.edu/user/allisonvyn/myst-build/final-shrija-owen-allison/"
    ]
   },
   {
