Adding data source section

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,9 @@
    "id": "e6ff9d9e-437a-4104-a125-cdfcaf2ce810",
    "metadata": {},
    "source": [
-    "## Data Source"
+    "## Data Source\n",
+    "\n",
+    "Our team retieved this dataset on early academic success from the UC Irvine Machine Learning Repository. The dataset was already cleanly converted into a csv file, allowing us to simply store it in the foler ‘data/’."
    ]
   },
   {
