Added updates to ReadME, main

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,9 @@
    "id": "1fafcef3-9cc9-4698-9348-7cd9d4f8e26a",
    "metadata": {},
    "source": [
-    "## Testing"
+    "## Testing\n",
+    "\n",
+    "The tests for our code can be found in the \"tools\" folder."
    ]
   },
   {
