--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,9 @@
    "id": "c052527c-b83d-4f98-82f2-7c755aac81ab",
    "metadata": {},
    "source": [
-    "## Introduction of Project"
+    "## Introduction of Project\n",
+    "\n",
+    "Student retention and academic success are critical metrics for higher education institutions, influencing both university rankings and the economic prospects of students. By analyzing student data institutions can better understand the underlying causes of attrition. This project aims to utilize data science techniques to dissect these complex relationships, moving beyond assumptions to find statistically significant predictors of whether a student will graduate or drop out."
    ]
   },
   {
@@ -30,8 +32,9 @@
    "metadata": {},
    "source": [
     "## Data Source\n",
+    "Our team retieved this dataset on early academic success from the UC Irvine Machine Learning Repository. The dataset, tited “Predict Students’ Dropout and Academic Success”, the dataset was constructed by consolidating several disjoint databases from a university. It contains features related to undergraduate students in fields such as agronomy, management, and nursing. The variables are divided into two categories: pre-enrollment features (academic path, demographics, socio-economic factors) and post-enrollment targets (academic performance in Semesters 1 and 2). The dataset was already cleanly converted into a csv file, allowing us to simply store it in the folder ‘data/’.\n",
     "\n",
-    "Our team retieved this dataset on early academic success from the UC Irvine Machine Learning Repository. The dataset was already cleanly converted into a csv file, allowing us to simply store it in the foler ‘data/’."
+    "Link to Data Source: https://archive.ics.uci.edu/dataset/697 predict+students+dropout+and+academic+success"
    ]
   },
   {
