Added student and logistic writeups to main

--- a/index.ipynb
+++ b/index.ipynb
@@ -25,13 +25,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "id": "66443f2a-4477-443e-aa9b-ba3e248b64f2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Binder here"
+    "## Binder\n",
+    "\n",
+    "https://mybinder.org/v2/gh/UCB-stat-159-f25/final-shrija-owen-allison/HEAD?urlpath=%2Fdoc%2Ftree%2Findex.ipynb"
    ]
   },
   {
@@ -39,7 +39,9 @@
    "id": "f803be0b-165d-4584-8641-91eeb8ccbc1c",
    "metadata": {},
    "source": [
-    "## Project Overview"
+    "## Project Overview\n",
+    "\n",
+    "Student retention and academic success are critical metrics for higher education institutions, influencing both university rankings and the economic prospects of students. By analyzing student data institutions can better understand the underlying causes of attrition. This project aims to utilize data science techniques to dissect these complex relationships, moving beyond assumptions to find statistically significant predictors of whether a student will graduate or drop out."
    ]
   },
   {
@@ -74,7 +76,10 @@
    "id": "e3b50bb9-9a3d-45c9-81e4-44610993304f",
    "metadata": {},
    "source": [
-    "Link to our Jupyter Book: https://stat159.datahub.berkeley.edu/user/allisonvyn/myst-build/final-shrija-owen-allison/"
+    "Link to our Jupyter Book MyST: \n",
+    "\n",
+    "\n",
+    "https://stat159.datahub.berkeley.edu/user/allisonvyn/myst-build/final-shrija-owen-allison/"
    ]
   },
   {
