--- a/main.ipynb
+++ b/main.ipynb
@@ -90,7 +90,9 @@
    "id": "eec47fb2-3ddd-4d28-a276-2322858110ad",
    "metadata": {},
    "source": [
-    "#### Student Factors"
+    "#### Student Factors\n",
+    "\n",
+    "Our dataset contained about 1.5 times more graduates than dropouts. We examined several variables, including previous qualifications and admission grades, but these did not appear to have a significant relationship with whether a student would eventually graduate. However, when we looked at the \"Age at Enrollment,\" we noticed that older students appeared more likely to drop out than younger students. We found that financial factors held the strongest relationship with our target variable; students who were in debt or behind on their tuition fees were far more likely to drop out than they were to graduate. Thus, we decided to move forward by focusing our regression analysis on these three most significant factors: Age at Enrollment, Debtor, and Tuition Fees Up to Date."
    ]
   },
   {
@@ -98,7 +100,9 @@
    "id": "4895e92f-6472-4954-a517-322f03dc6129",
    "metadata": {},
    "source": [
-    "#### Logistic Regression"
+    "#### Logistic Regression\n",
+    "\n",
+    "We wanted to see how accurate of a logistic model we could make using the most significant variables we identified during our exploratory analysis (Age, Debt, and Tuition Fees). Our model proved capable with an accuracy of 72% but seemed biased toward predicting success. Looking at the confusion matrix, we saw that our model was very good at identifying true graduates (only misclassifying 19 of them) but it struggled to correctly label the dropouts.  We concluded that while our selected factors are useful for predicting if a student will finish school, they are insufficient on their own to effectively identify students at risk of dropping out."
    ]
   },
   {
@@ -141,7 +145,8 @@
     "1. Found Dataset\n",
     "2. Created the MYST enviornment\n",
     "3. Created Binder\n",
-    "4. Contributed to ai_documentation.txt"
+    "4. Worked on Main writeups (indroduction, data source, logistic regresion, student factors)\n",
+    "5. Contributed to ai_documentation.txt"
    ]
   },
   {
