Adding License Information

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,8 +123,17 @@
    "id": "5bcb2f60-ddf2-4b6c-8953-5ac0f7374358",
    "metadata": {},
    "source": [
-    "## License"
+    "## License\n",
+    "This project is licensed under the BSD 3-Clause License."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67c6e1d8-ecd3-400b-bd06-e7d1af3de319",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
