fixing link to main

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,10 +76,10 @@
    "id": "e3b50bb9-9a3d-45c9-81e4-44610993304f",
    "metadata": {},
    "source": [
-    "Link to our Jupyter Book MyST: \n",
+    "Link to our Jupyter Book (Main): \n",
     "\n",
     "\n",
-    "https://stat159.datahub.berkeley.edu/user/allisonvyn/myst-build/final-shrija-owen-allison/"
+    "https://stat159.datahub.berkeley.edu/user/allisonvyn/myst-build/final-shrija-owen-allison/main/"
    ]
   },
   {
