Adjusting overview writeup on index

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Project Overview\n",
     "\n",
-    "Student retention and academic success are critical metrics for higher education institutions, influencing both university rankings and the economic prospects of students. By analyzing student data institutions can better understand the underlying causes of attrition. This project aims to utilize data science techniques to dissect these complex relationships, moving beyond assumptions to find statistically significant predictors of whether a student will graduate or drop out."
+    "This project aims to utilize data science techniques to dissect these complex relationships, moving beyond assumptions to find statistically significant predictors of whether a student will graduate or drop out. Student retention and academic success are critical metrics for higher education institutions, influencing both university rankings and the economic prospects of students. By analyzing student data institutions can better understand the underlying causes of attrition. "
    ]
   },
   {
