Fixed Binder Issues

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,9 +29,9 @@
    "id": "66443f2a-4477-443e-aa9b-ba3e248b64f2",
    "metadata": {},
    "source": [
-    "## Binder\n",
+    "![Binder](https://mybinder.org/v2/gh/UCB-stat-159-f25/final-shrija-owen-allison/HEAD)\n",
     "\n",
-    "https://mybinder.org/v2/gh/UCB-stat-159-f25/final-shrija-owen-allison/HEAD?urlpath=%2Fdoc%2Ftree%2Findex.ipynb"
+    "https://mybinder.org/v2/gh/UCB-stat-159-f25/final-shrija-owen-allison/HEAD"
    ]
   },
   {
