Added Repository structure

--- a/index.ipynb
+++ b/index.ipynb
@@ -97,7 +97,21 @@
    "source": [
     "'data/:' contains the downloaded csv data file\n",
     "\n",
-    "'outputs/:' contains the generated plots and graphs"
+    "'outputs/:' contains the generated plots and graphs\n",
+    "\n",
+    "'tools/:' contains our tests\n",
+    "\n",
+    "'main.ipynb:' Is our project notebook and provides an overview of the analysis and our results\n",
+    "\n",
+    "'parent.ipynb:' Notebook containing data cleaning and preprocessing steps for the parent data\n",
+    "\n",
+    "'student.ipynb:' Notebook containing data cleaning and preprocessing for the student data\n",
+    "\n",
+    "'model_building.ipynb:' Notebook containing the logistic regression model training and evaluation \n",
+    "\n",
+    "'environment.yml:' Environment file with required packages for the project\n",
+    "\n",
+    "'myst.yml:' Makefile to build JupyterBook for the repository and manage other tasks\n"
    ]
   },
   {
@@ -126,14 +140,6 @@
     "## License\n",
     "This project is licensed under the BSD 3-Clause License."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67c6e1d8-ecd3-400b-bd06-e7d1af3de319",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
